# mnesis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  ci.yml  dependency-review.yml  docs.yml  publish.yml  scorecard.yml
benchmarks/: .gitignore  README.md  locomo.py
docs/: CNAME  api.md  architecture.md  byo-llm.md  changelog.md  concepts.md  configuration.md  events.md  examples.md  gen_ref_pages.py  getting-started.md  index.md  operators.md  providers.md
docs/api/: index.md  session.md
docs/api/compaction/: engine.md  index.md  levels.md  pruner.md
docs/api/context/: builder.md  index.md
docs/api/events/: bus.md  index.md
docs/api/files/: handler.md  index.md
docs/api/models/: config.md  index.md  message.md  summary.md
docs/api/operators/: agentic_map.md  index.md  llm_map.md
docs/api/store/: immutable.md  index.md  pool.md  summary_dag.md
docs/api/tokens/: estimator.md  index.md
docs/hooks/: cfasync.py  mermaid_render.py
docs/javascripts/: mermaid-init.js  panzoom-bundle.js  panzoom-diagrams.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: 01_basic_session.py  02_long_running_agent.py  03_tool_use.py  04_large_files.py  05_parallel_processing.py  06_byo_llm.py  07_streaming.py
src/mnesis/: __init__.py  session.py
src/mnesis/compaction/: __init__.py  engine.py  file_ids.py  levels.py  pruner.py
src/mnesis/context/: __init__.py  builder.py
src/mnesis/events/: __init__.py  bus.py  payloads.py
src/mnesis/files/: __init__.py  handler.py
src/mnesis/models/: __init__.py  config.py  message.py  snapshot.py  summary.py
src/mnesis/operators/: __init__.py  agentic_map.py  llm_map.py  template_utils.py
src/mnesis/store/: __init__.py  immutable.py  pool.py  schema.sql  summary_dag.py
src/mnesis/tokens/: __init__.py  estimator.py
tests/: conftest.py  test_compaction.py  test_condensation_file_ids.py  test_config.py  test_context_builder.py  test_estimator.py  test_files.py  test_operators.py  test_pruner.py  test_session.py  test_store.py
