[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnesis"
version = "0.1.0"
description = "Lossless Context Management — persistent memory for LLM agent sessions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Mnesis Authors" }]
keywords = ["llm", "context", "memory", "agents", "compaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "litellm>=1.40.0",
    "anthropic>=0.30.0",
    "tiktoken>=0.7.0",
    "python-ulid>=3.0.0",
    "structlog>=24.2.0",
    "anyio>=4.4.0",
    "python-magic>=0.4.27",
    "jinja2>=3.1.4",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-jsonschema>=4.23.0",
    "types-PyYAML>=6.0.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "hypothesis>=6.100.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnesis"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF", "ASYNC", "PTH"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["mnesis"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/mnesis"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "aiosqlite.*",
    "tiktoken.*",
    "ulid.*",
    "magic.*",
    "structlog.*",
    "jinja2.*",
    "jsonschema.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/mnesis",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=74",
    "-v",
]
filterwarnings = [
    # litellm uses the deprecated asyncio.iscoroutinefunction on Python 3.14+
    "ignore::DeprecationWarning:litellm",
]

[tool.coverage.run]
source = ["src/mnesis"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]
