[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnesis"
version = "0.1.1"
description = "Lossless Context Management — persistent memory for LLM agent sessions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Mnesis Authors" }]
keywords = ["llm", "context", "memory", "agents", "compaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "litellm>=1.40.0",
    "tiktoken>=0.7.0",
    "python-ulid>=3.0.0",
    "structlog>=24.2.0",
    "anyio>=4.4.0",
    "python-magic>=0.4.27",
    "jinja2>=3.1.4",
    "jsonschema>=4.22.0",
]

[project.urls]
Homepage      = "https://mnesis.lucenor.tech"
Documentation = "https://mnesis.lucenor.tech"
Source        = "https://github.com/Lucenor/mnesis"
Changelog     = "https://mnesis.lucenor.tech/changelog/"
Issues        = "https://github.com/Lucenor/mnesis/issues"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-jsonschema>=4.23.0",
    "types-PyYAML>=6.0.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "hypothesis>=6.100.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "tqdm>=4.0",
    "types-tqdm>=4.0",
]

docs = [
    "mkdocs>=1.6.0,<2.0",
    "mkdocs-material>=9.5.0,<10.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-d2-plugin>=1.6.0",
    "mkdocs-panzoom-plugin>=0.5.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnesis"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF", "ASYNC", "PTH"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Benchmark scripts use stdlib asyncio; ASYNC230/240 target trio/anyio codebases
"benchmarks/**" = ["ASYNC230", "ASYNC240"]

[tool.ruff.lint.isort]
known-first-party = ["mnesis"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src/mnesis"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "aiosqlite.*",
    "tiktoken.*",
    "ulid.*",
    "magic.*",
    "structlog.*",
    "jinja2.*",
    "jsonschema.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/mnesis",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=74",
    "-v",
]
filterwarnings = [
    # litellm uses the deprecated asyncio.iscoroutinefunction on Python 3.14+
    "ignore::DeprecationWarning:litellm",
]

[tool.coverage.run]
source = ["src/mnesis"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]
